# rf-se

./: .gitignore  BENCH_LIFECYCLE_STATE_MACHINE.md  BENCH_STATE_CONSISTENCY_MODEL.md  BENCH_USABILITY_DESIGN.md  CANONICAL_NETWORK_ARCHITECTURE.md  CANONICAL_SE_BASIS.md  DEVICE_OPERATION_AUDIT.md  DISTRIBUTED_READINESS_PLAN.md  EQUIPMENT_VALIDATION.md  FIELD_READINESS_AUDIT.md  GUI_MIGRATION_TRACKING.md  NETWORKED_OPERATION_SPEC.md  PROVENANCE.md  README.md  agent_core.py  agent_knowledge.py  agent_panel.py  agent_tools.py  bench_gui.py  budget.py  cli.py  config.py  connection.py  control_lease.py  control_plane.py  coordinator.py  device_state.py  discover.py  discovery.py  drivers.py  freqstep.py  identity.py  instrument_hub.py  lease_diagnostics.py  live.py  loop.py  measurements.py  point_op_mode.py  presets.py  probe_sweep.py  (+13 more)
audit/: 2026-07-03-gpib-audit-analyzer-8565ec.md  2026-07-03-gpib-audit-bridge-linuxgpib.md  2026-07-03-gpib-audit-source-68369a.md  2026-07-03-gpib-low-level-audit.md  2026-07-04-issue-register-and-trace-plan.md  2026-07-04-psd-blank-read-path-state-consistency.md  2026-07-05-driving-vs-defect-audit.md
gpib_bridge/: README.md  __init__.py  ni_gpib_server.py  protocol.py  provision.sh  vm.py
tests/: conftest.py  test_agent.py  test_analyzer_health_gate.py  test_arbiter.py  test_band_trust.py  test_bench.py  test_calibration.py  test_campaign_se.py  test_chain.py  test_checkpath.py  test_cli_gui_verbs.py  test_client_reliability.py  test_control_lease.py  test_defect_8565ec_reference_live.py  test_device_operation.py  test_device_state.py  (+36 more)
(+5 files in other folders)
